syntax = "proto3";
package proto;

import "github.com/magaldima/bizday/pkg/bizday.proto";

message UnaryDateRequest {
    github.com.magaldima.bizday.pkg.bizday.Date date = 1;
}

message BinaryDateRequest {
    github.com.magaldima.bizday.pkg.bizday.Date start = 1;
    github.com.magaldima.bizday.pkg.bizday.Date end = 1;
}

message BoolResponse {
    bool ok = 1;
}

service Holiday {
    rpc IsHoliday (github.com.magaldima.bizday.pkg.bizday.Date) returns (BoolResponse);
    rpc HolidaysBetween (BinaryDateRequest) returns (github.com.magaldima.bizday.pkg.bizday.NumberOfDaysResponse);
}
